--- a/index.html
+++ b/index.html
@@ -20,6 +20,40 @@
 
 	<!--<script src="js/jquery.js" type="text/javascript"></script>-->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
+	
+	<!-- Load up the event data for the demos -->
+	<script>
+		var eventsInline = [
+			{ "startDate": "1337594400000", "classEvent": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },
+			{ "startDate": "1337677200000", "classEvent": "demo",    "title": "Project B demo",    "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },
+			{ "startDate": "1338897600000", "classEvent": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },
+			{ "startDate": "1338885237000", "classEvent": "demo",    "title": "Project B demo",    "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },
+			{ "startDate": "1341750647000", "classEvent": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },
+			{ "startDate": "1342614647000", "classEvent": "demo",    "title": "Project B demo",    "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },
+			{ "startDate": "1344515447000", "classEvent": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },
+			{ "startDate": "1345033847000", "classEvent": "demo",    "title": "Project B demo",    "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },
+			{ "startDate": "1347712247000", "classEvent": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },
+			{ "startDate": "1348230647000", "classEvent": "demo",    "title": "Project B demo",    "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },
+			{ "startDate": "1349094647000", "classEvent": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },
+			{ "startDate": "1351600247",    "classEvent": "demo",    "title": "Project B demo",    "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" }
+		];
+		var eventsWithHumanDateFormat = [
+			{ "startDate": "2013-04-01 17:30:00", "classEvent": "meeting", "title": "Test Last Year",                                     "description": "Lorem Ipsum dolor set", "url": "" },
+			{ "startDate": "2013-04-02 17:30:00", "classEvent": "meeting", "title": "Test Last Year",                                     "description": "Lorem Ipsum dolor set", "url": "" },
+			{ "startDate": "2013-04-10 12:00:00", "classEvent": "meeting", "title": "Project meeting",                                    "description": "Lorem Ipsum dolor set", "url": "" },
+			{ "startDate": "2013-04-10 14:00:00", "classEvent": "demo",    "title": "Project demo",                                       "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },
+			{ "startDate": "2013-04-10 19:00:00", "classEvent": "meeting", "title": "Test Project Brainstorming",                         "description": "Lorem Ipsum dolor set", "url": "http://www.event3.com/" },
+			{ "startDate": "2013-04-11 12:00:00", "classEvent": "test",    "title": "A very very long name for a f*cking project events", "description": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.", "url": "http://www.event4.com/" },
+			{ "startDate": "2013-04-11 13:00:00", "classEvent": "meeting", "title": "Project meeting",                                    "description": "Lorem Ipsum dolor set", "url": "http://www.event5.com/" },
+			{ "startDate": "2013-04-22 12:00:00", "classEvent": "demo",    "title": "Project demo",                                       "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event6.com/" },
+			{ "startDate": "2013-04-23 12:00:00", "classEvent": "meeting", "title": "Test Project Brainstorming",                         "description": "Lorem Ipsum dolor set", "url": "http://www.event7.com/" },
+			{ "startDate": "2013-05-01 13:00:00", "classEvent": "test",    "title": "A very very long name for a f*cking project events", "description": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.", "url": "http://www.event8.com/" },
+			{ "startDate": "2013-05-02 14:00:00", "classEvent": "demo",    "title": "Project demo",                                       "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event9.com/" },
+			{ "startDate": "2013-05-02 15:00:00", "classEvent": "meeting", "title": "Test Project Brainstorming",                         "description": "Lorem Ipsum dolor set", "url": "http://www.event10.com/" },
+			{ "startDate": "2013-05-04 16:00:00", "classEvent": "test",    "title": "A very very long name for a f*cking project events", "description": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.", "url": "http://www.event11.com/" }
+		];
+
+	</script>
 
 </head>
 <body id="responsiveDemo">
@@ -45,7 +79,6 @@
 				<ul class="features disc">
 					<li><strong>Fluid Calendar</strong>: calendar will be shown with the width of its parent. Size is recalculated on window resize. So <strong>you can use it in your responsive designs</strong></li>
 					<li><strong>Change Style as you like</strong>: You can edit the .css file to restyle</li>
-					<li><strong>Light</strong>: Less than 8kb of Javascript(minified)</li>
 					<li><strong>jQuery rules!</strong>: It uses all the power of jQuery, but you can also use it with frameworks like Zepto.js</li>
 					<li><strong>Highly customizable</strong>: You can change almost everything. Look at the following examples</li>
 				</ul>
@@ -62,14 +95,15 @@
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarHumanDate").eventCalendar({
-							eventsjson: 'json/event.humanDate.json.php',
-							jsonDateFormat: 'human'  // 'YYYY-MM-DD HH:MM:SS'
+							jsonData: eventsWithHumanDateFormat,
+							jsonDateFormat: 'YYYY-MM-DD HH:MM:SS',
+							currentDate: new Date(2013, 3, 1, 0, 0, 0)
 						});
 					});
 				</script>
 <pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
-  jsonDateFormat: 'human'
+  jsonData:       eventsWithHumanDateFormat,
+  jsonDateFormat: 'YYYY-MM-DD HH:MM:SS'
 });</pre>
 			</div>
 		</div>
@@ -80,13 +114,13 @@
 				<div id="eventCalendarDefault"></div>
 				<pre>$(id).eventCalendar({
   // link to events json
-  eventsjson: 'file.json'
+  eventsJson: 'file.json'
 });</pre>
 
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarDefault").eventCalendar({
-							eventsjson: 'json/events.json.php' // link to events json
+							eventsJson: 'json/events.json.php' // link to events json
 						});
 					});
 				</script>
@@ -98,13 +132,13 @@
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarNoCache").eventCalendar({
-							eventsjson: 'json/events.json.php',
+							eventsJson: 'json/events.json.php',
 							cacheJson: false
 						});
 					});
 				</script>
 <pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   cacheJson: false
 }); </pre>
 			</div>
@@ -114,10 +148,9 @@
 				<div id="eventCalendarInline"></div>
 				<script>
 					$(document).ready(function() {
-						var eventsInline = [{ "date": "1337594400000", "type": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },{ "date": "1337677200000", "type": "demo", "title": "Project B demo", "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },{ "date": "1338897600000", "type": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },{ "date": "1338885237000", "type": "demo", "title": "Project B demo", "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },{ "date": "1341750647000", "type": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },{ "date": "1342614647000", "type": "demo", "title": "Project B demo", "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },{ "date": "1344515447000", "type": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },{ "date": "1345033847000", "type": "demo", "title": "Project B demo", "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },{ "date": "1347712247000", "type": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },{ "date": "1348230647000", "type": "demo", "title": "Project B demo", "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },{ "date": "1349094647000", "type": "meeting", "title": "Project A meeting", "description": "Lorem Ipsum dolor set", "url": "http://www.event1.com/" },{ "date": "1351600247", "type": "demo", "title": "Project B demo", "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" }];
-
 						$("#eventCalendarInline").eventCalendar({
-							jsonData: eventsInline
+							jsonData: eventsInline,
+							currentDate: new Date(2012, 4, 1, 0, 0, 0)
 						});
 					});
 				</script>
@@ -137,7 +170,7 @@ $(id).eventCalendar({
 			<script>
 				$(document).ready(function() {
 					$("#eventCalendarLocale").eventCalendar({
-						eventsjson: 'json/events.json.php',
+						eventsJson: 'json/events.json.php',
 						monthNames: [ "Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio",
 							"Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre" ],
 						dayNames: [ 'Domingo','Lunes','Martes','Miércoles',
@@ -154,7 +187,7 @@ $(id).eventCalendar({
 				});
 			</script>
 <pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   monthNames: [ "Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio",
     "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre" ],
   dayNames: [ 'Domingo','Lunes','Martes','Miércoles',
@@ -176,13 +209,13 @@ $(id).eventCalendar({
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarLimit").eventCalendar({
-							eventsjson: 'json/events.json.php',
+							eventsJson: 'json/events.json.php',
 							eventsLimit: 2
 						});
 					});
 				</script>
 <pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   eventsLimit: 2
 }); </pre>
 			</div>
@@ -193,13 +226,13 @@ $(id).eventCalendar({
 			<script>
 				$(document).ready(function() {
 					$("#eventCalendarCalendarSunday").eventCalendar({
-						eventsjson: 'json/events.json.php',
+						eventsJson: 'json/events.json.php',
 						startWeekOnMonday: false
 					});
 				});
 			</script>
 <pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   startWeekOnMonday: false
 });</pre>
 			</div>
@@ -214,13 +247,13 @@ $(id).eventCalendar({
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarCalendarLine").eventCalendar({
-							eventsjson: 'json/events.json.php',
+							eventsJson: 'json/events.json.php',
 							showDayAsWeeks: false
 						});
 					});
 				</script>
 <pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   showDayAsWeeks: false
 });</pre>
 			</div>
@@ -231,13 +264,13 @@ $(id).eventCalendar({
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarWeekDays").eventCalendar({
-							eventsjson: 'json/events.json.php',
+							eventsJson: 'json/events.json.php',
 							showDayNameInCalendar: false
 						});
 					});
 				</script>
 			<pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   showDayNameInCalendar: false
 });</pre>
 			</div>
@@ -252,13 +285,13 @@ $(id).eventCalendar({
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarShowDescription").eventCalendar({
-							eventsjson: 'json/events.json.php',
+							eventsJson: 'json/events.json.php',
 							showDescription: true
 						});
 					});
 				</script>
 			<pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   showDescription: true
 });</pre>
 			</div>
@@ -269,13 +302,13 @@ $(id).eventCalendar({
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarOnlyOneDescription").eventCalendar({
-							eventsjson: 'json/events.json.php',
+							eventsJson: 'json/events.json.php',
 							onlyOneDescription: false
 						});
 					});
 				</script>
 <pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   onlyOneDescription: false
 });</pre>
 			</div>
@@ -286,14 +319,14 @@ $(id).eventCalendar({
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarAnimation").eventCalendar({
-							eventsjson: 'json/events.json.php',
+							eventsJson: 'json/events.json.php',
 							moveSpeed: 2000,
 							moveOpacity: 1
 						});
 					});
 				</script>
 			<pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   moveSpeed: 2000,
   moveOpacity: 1
 });</pre>
@@ -309,13 +342,13 @@ $(id).eventCalendar({
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarScroll").eventCalendar({
-							eventsjson: 'json/events.json.php',
+							eventsJson: 'json/events.json.php',
 							eventsScrollable: true
 						});
 					});
 				</script>
 <pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   eventsScrollable: true
 });</pre>
 			</div>
@@ -326,14 +359,14 @@ $(id).eventCalendar({
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarNewWindow").eventCalendar({
-							eventsjson: 'json/events.json.php',
+							eventsJson: 'json/events.json.php',
 							openEventInNewWindow: true,
 							showDescription: true // also it can be false
 						});
 					});
 				</script>
 <pre>$(id).eventCalendar({
-  eventsjson: 'file.json',
+  eventsJson: 'file.json',
   openEventInNewWindow: true,
   showDescription: true // also it can be false
 });</pre>
@@ -403,6 +436,7 @@ $(id).eventCalendar({
 
 <!--script src="js/jquery.timeago.js" type="text/javascript"></script-->
 <!--<script src="js/jquery.eventCalendar.min.js" type="text/javascript"></script>-->
+<script src="lib/datejs/build/date-en-US.js" type="text/javascript"></script>
 <script src="js/jquery.eventCalendar.js" type="text/javascript"></script>
 
 
