Cleaned up another couple of demo calendars (issue #1)

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 			{ "startDate": "1351600247",    "classEvent": "demo",    "title": "Project B demo",    "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" }
 		];
 		var eventsWithHumanDateFormat = [
-			{ "startDate": "2013-04-01 17:30:00", "classEvent": "meeting", "title": "Test Last Year",                                     "description": "Lorem Ipsum dolor set", "url": "" },
-			{ "startDate": "2013-04-02 17:30:00", "classEvent": "meeting", "title": "Test Last Year",                                     "description": "Lorem Ipsum dolor set", "url": "" },
-			{ "startDate": "2013-04-10 12:00:00", "classEvent": "meeting", "title": "Project meeting",                                    "description": "Lorem Ipsum dolor set", "url": "" },
-			{ "startDate": "2013-04-10 14:00:00", "classEvent": "demo",    "title": "Project demo",                                       "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },
-			{ "startDate": "2013-04-10 19:00:00", "classEvent": "meeting", "title": "Test Project Brainstorming",                         "description": "Lorem Ipsum dolor set", "url": "http://www.event3.com/" },
-			{ "startDate": "2013-04-11 12:00:00", "classEvent": "test",    "title": "A very very long name for a f*cking project events", "description": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.", "url": "http://www.event4.com/" },
-			{ "startDate": "2013-04-11 13:00:00", "classEvent": "meeting", "title": "Project meeting",                                    "description": "Lorem Ipsum dolor set", "url": "http://www.event5.com/" },
-			{ "startDate": "2013-04-22 12:00:00", "classEvent": "demo",    "title": "Project demo",                                       "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event6.com/" },
-			{ "startDate": "2013-04-23 12:00:00", "classEvent": "meeting", "title": "Test Project Brainstorming",                         "description": "Lorem Ipsum dolor set", "url": "http://www.event7.com/" },
-			{ "startDate": "2013-05-01 13:00:00", "classEvent": "test",    "title": "A very very long name for a f*cking project events", "description": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.", "url": "http://www.event8.com/" },
-			{ "startDate": "2013-05-02 14:00:00", "classEvent": "demo",    "title": "Project demo",                                       "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event9.com/" },
-			{ "startDate": "2013-05-02 15:00:00", "classEvent": "meeting", "title": "Test Project Brainstorming",                         "description": "Lorem Ipsum dolor set", "url": "http://www.event10.com/" },
-			{ "startDate": "2013-05-04 16:00:00", "classEvent": "test",    "title": "A very very long name for a f*cking project events", "description": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.", "url": "http://www.event11.com/" }
+			{ "startDate": "2013-04-01 17:30:00", "classEvent": "meeting", "title": "Test Last Year",                                       "description": "Lorem Ipsum dolor set", "url": "" },
+			{ "startDate": "2013-04-02 17:30:00", "classEvent": "meeting", "title": "Test Last Year",                                       "description": "Lorem Ipsum dolor set", "url": "" },
+			{ "startDate": "2013-04-10 12:00:00", "classEvent": "meeting", "title": "Project meeting",                                      "description": "Lorem Ipsum dolor set", "url": "" },
+			{ "startDate": "2013-04-10 14:00:00", "classEvent": "demo",    "title": "Project demo",                                         "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event2.com/" },
+			{ "startDate": "2013-04-10 19:00:00", "classEvent": "meeting", "title": "Test Project Brainstorming",                           "description": "Lorem Ipsum dolor set", "url": "http://www.event3.com/" },
+			{ "startDate": "2013-04-10 20:00:00", "classEvent": "test",    "title": "A very very long name for a very silly project event", "description": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.", "url": "http://www.event4.com/" },
+			{ "startDate": "2013-04-11 13:00:00", "classEvent": "meeting", "title": "Project meeting",                                      "description": "Lorem Ipsum dolor set", "url": "http://www.event5.com/" },
+			{ "startDate": "2013-04-17 12:00:00", "classEvent": "demo",    "title": "Project demo",                                         "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event6.com/" },
+			{ "startDate": "2013-04-23 12:00:00", "classEvent": "meeting", "title": "Test Project Brainstorming",                           "description": "Lorem Ipsum dolor set", "url": "http://www.event7.com/" },
+			{ "startDate": "2013-05-01 13:00:00", "classEvent": "test",    "title": "A very very long name for a very silly project event", "description": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.", "url": "http://www.event8.com/" },
+			{ "startDate": "2013-05-02 14:00:00", "classEvent": "demo",    "title": "Project demo",                                         "description": "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.", "url": "http://www.event9.com/" },
+			{ "startDate": "2013-05-02 15:00:00", "classEvent": "meeting", "title": "Test Project Brainstorming",                           "description": "Lorem Ipsum dolor set", "url": "http://www.event10.com/" },
+			{ "startDate": "2013-05-04 16:00:00", "classEvent": "test",    "title": "A very very long name for a very silly project event", "description": "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam.", "url": "http://www.event11.com/" }
 		];
 
 	</script>
@@ -88,77 +88,88 @@
 	<hr />
 	<div class="container">
 		<div class="row">
-			<div class="g6">
+			<div class="g5">
 				<h2 class="h4">Human Date Format</h2>
 				<p class="demoDesc">Most of you don't like timestamp date format, so now you can use another formats</p>
 				<div id="eventCalendarHumanDate"></div>
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarHumanDate").eventCalendar({
-							jsonData: eventsWithHumanDateFormat,
-							jsonDateFormat: 'YYYY-MM-DD HH:MM:SS',
-							currentDate: new Date(2013, 3, 1, 0, 0, 0)
+							jsonData       : eventsWithHumanDateFormat,
+							jsonDateFormat : 'YYYY-MM-DD HH:MM:SS',
+                            eventsLimit    : 200,
+							currentDate    : new Date(2013, 3, 1, 0, 0, 0)
 						});
 					});
 				</script>
-<pre>$(id).eventCalendar({
-  jsonData:       eventsWithHumanDateFormat,
-  jsonDateFormat: 'YYYY-MM-DD HH:MM:SS'
+<pre>var eventsWithHumanDateFormat = [{ json }];
+$(id).eventCalendar({
+  jsonData       : eventsWithHumanDateFormat,
+  jsonDateFormat : 'YYYY-MM-DD HH:MM:SS'
 });</pre>
 			</div>
 		</div>
 		<div class="row">
 			<div class="g4">
 				<h2 class="h4">Default Demo</h2>
-				<p class="demoDesc">Example of jQuery Events Calendar with default parameters</p>
+				<p class="demoDesc">Example of jQuery Events Calendar with default parameters (using inline json)</p>
 				<div id="eventCalendarDefault"></div>
-				<pre>$(id).eventCalendar({
-  // link to events json
-  eventsJson: 'file.json'
+<pre>var eventsInline = [{ json }];
+$(id).eventCalendar({
+  jsonData: eventsInline
 });</pre>
 
 				<script>
 					$(document).ready(function() {
 						$("#eventCalendarDefault").eventCalendar({
-							eventsJson: 'json/events.json.php' // link to events json
+							jsonData    : eventsInline,
+                            currentDate : new Date(2012, 4, 1, 0, 0, 0)
 						});
 					});
 				</script>
 			</div>
-			<div class="g4">
-				<h2 class="h4">No cache</h2>
-				<p class="demoDesc">The plugin only calls once to the json file, so it has to contain all events. After that call, the plugin will filter the results</p>
-				<div id="eventCalendarNoCache"></div>
-				<script>
-					$(document).ready(function() {
-						$("#eventCalendarNoCache").eventCalendar({
-							eventsJson: 'json/events.json.php',
-							cacheJson: false
-						});
-					});
-				</script>
-<pre>$(id).eventCalendar({
-  eventsJson: 'file.json',
-  cacheJson: false
-}); </pre>
-			</div>
-			<div class="g4">
-				<h2 class="h4">inline json</h2>
-				<p class="demoDesc">The json is written directly inside the plugin function via javaScript (no ajax call to get the events).</p>
-				<div id="eventCalendarInline"></div>
-				<script>
-					$(document).ready(function() {
-						$("#eventCalendarInline").eventCalendar({
-							jsonData: eventsInline,
-							currentDate: new Date(2012, 4, 1, 0, 0, 0)
-						});
-					});
-				</script>
-<pre>var eventsInline = [{ json }];
+            <div class="g4">
+                <h2 class="h4">Limit Results</h2>
+                <p class="demoDesc">It is possible to limit the number of events to show. But if we click on a day, results will not be filtered</p>
+                <div id="eventCalendarLimit"></div>
+                <script>
+                    $(document).ready(function() {
+                        $("#eventCalendarLimit").eventCalendar({
+                            jsonData       : eventsWithHumanDateFormat,
+                            jsonDateFormat : 'YYYY-MM-DD HH:MM:SS',
+                            eventsLimit    : 2,
+                            currentDate    : new Date(2013, 3, 1, 0, 0, 0)
+                        });
+                    });
+                </script>
+<pre>var eventsWithHumanDateFormat = [{ json }];
 $(id).eventCalendar({
-  jsonData: eventsInline
-}); </pre>
-			</div>
+  jsonData       : eventsWithHumanDateFormat,
+  jsonDateFormat : 'YYYY-MM-DD HH:MM:SS',
+  eventsLimit    : 2
+});</pre>
+            </div>
+            <div class="g4">
+                <h2 class="h4">Start week on Sunday</h2>
+                <p class="demoDesc">Also you can customize the day when the week starts</p>
+                <div id="eventCalendarCalendarSunday"></div>
+                <script>
+                    $(document).ready(function() {
+                        $("#eventCalendarCalendarSunday").eventCalendar({
+                            jsonData          : eventsWithHumanDateFormat,
+                            jsonDateFormat    : 'YYYY-MM-DD HH:MM:SS',
+                            startWeekOnMonday : false,
+                            currentDate       : new Date(2013, 3, 1, 0, 0, 0)
+                        });
+                    });
+                </script>
+<pre>var eventsWithHumanDateFormat = [{ json }];
+$(id).eventCalendar({
+  jsonData          : eventsWithHumanDateFormat,
+  jsonDateFormat    : 'YYYY-MM-DD HH:MM:SS',
+  startWeekOnMonday : false
+});</pre>
+            </div>
 		</div>
 	</div>
 	<div class="container">
@@ -201,40 +212,6 @@ $(id).eventCalendar({
   txt_NextEvents: "Próximos eventos:",
   txt_GoToEventUrl: "Ir al evento",
 }); </pre>
-			</div>
-			<div class="g4">
-				<h2 class="h4">Limit Results</h2>
-				<p class="demoDesc">It is possible to limit the number of events to show. But if we click on a day, results will not be filtered</p>
-				<div id="eventCalendarLimit"></div>
-				<script>
-					$(document).ready(function() {
-						$("#eventCalendarLimit").eventCalendar({
-							eventsJson: 'json/events.json.php',
-							eventsLimit: 2
-						});
-					});
-				</script>
-<pre>$(id).eventCalendar({
-  eventsJson: 'file.json',
-  eventsLimit: 2
-}); </pre>
-			</div>
-			<div class="g4">
-				<h2 class="h4">Start week on Sunday</h2>
-				<p class="demoDesc">Also you can customize the day when the week starts</p>
-				<div id="eventCalendarCalendarSunday"></div>
-			<script>
-				$(document).ready(function() {
-					$("#eventCalendarCalendarSunday").eventCalendar({
-						eventsJson: 'json/events.json.php',
-						startWeekOnMonday: false
-					});
-				});
-			</script>
-<pre>$(id).eventCalendar({
-  eventsJson: 'file.json',
-  startWeekOnMonday: false
-});</pre>
 			</div>
 		</div>
 	</div>
@@ -331,6 +308,23 @@ $(id).eventCalendar({
   moveOpacity: 1
 });</pre>
 			</div>
+            <div class="g4">
+                <h2 class="h4">No cache</h2>
+                <p class="demoDesc">The plugin only calls once to the json file, so it has to contain all events. After that call, the plugin will filter the results</p>
+                <div id="eventCalendarNoCache"></div>
+                <script>
+                    $(document).ready(function() {
+                        $("#eventCalendarNoCache").eventCalendar({
+                            eventsJson: 'json/events.json.php',
+                            cacheJson: false
+                        });
+                    });
+                </script>
+<pre>$(id).eventCalendar({
+  eventsJson: 'file.json',
+  cacheJson: false
+}); </pre>
+            </div>
 		</div>
 	</div>
 	<div class="container">
